// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar Snapshots should apply 'circle' appearance classes 1`] = `
<div>
  <div
    class="avatar avatar--circle avatar--md avatar--primary"
  >
    EC
  </div>
</div>
`;

exports[`Avatar Snapshots should apply 'critical' skin classes 1`] = `
<div>
  <div
    class="avatar avatar--circle avatar--md avatar--critical"
  >
    EC
  </div>
</div>
`;

exports[`Avatar Snapshots should apply 'lg' size classes 1`] = `
<div>
  <div
    class="avatar avatar--circle avatar--lg avatar--primary"
  >
    EC
  </div>
</div>
`;

exports[`Avatar Snapshots should apply 'md' size classes 1`] = `
<div>
  <div
    class="avatar avatar--circle avatar--md avatar--primary"
  >
    EC
  </div>
</div>
`;

exports[`Avatar Snapshots should apply 'neutral' skin classes 1`] = `
<div>
  <div
    class="avatar avatar--circle avatar--md avatar--neutral"
  >
    EC
  </div>
</div>
`;

exports[`Avatar Snapshots should apply 'primary' skin classes 1`] = `
<div>
  <div
    class="avatar avatar--circle avatar--md avatar--primary"
  >
    EC
  </div>
</div>
`;

exports[`Avatar Snapshots should apply 'secondary' skin classes 1`] = `
<div>
  <div
    class="avatar avatar--circle avatar--md avatar--secondary"
  >
    EC
  </div>
</div>
`;

exports[`Avatar Snapshots should apply 'sm' size classes 1`] = `
<div>
  <div
    class="avatar avatar--circle avatar--sm avatar--primary"
  >
    EC
  </div>
</div>
`;

exports[`Avatar Snapshots should apply 'square' appearance classes 1`] = `
<div>
  <div
    class="avatar avatar--square avatar--md avatar--primary"
  >
    EC
  </div>
</div>
`;

exports[`Avatar Snapshots should apply 'success' skin classes 1`] = `
<div>
  <div
    class="avatar avatar--circle avatar--md avatar--success"
  >
    EC
  </div>
</div>
`;

exports[`Avatar Snapshots should apply 'xl' size classes 1`] = `
<div>
  <div
    class="avatar avatar--circle avatar--xl avatar--primary"
  >
    EC
  </div>
</div>
`;

exports[`Avatar Snapshots should apply 'xs' size classes 1`] = `
<div>
  <div
    class="avatar avatar--circle avatar--xs avatar--primary"
  >
    EC
  </div>
</div>
`;

exports[`Avatar Snapshots should render additional classes 1`] = `
<div>
  <div
    class="avatar avatar--circle avatar--md avatar--primary other-class"
  >
    EC
  </div>
</div>
`;

exports[`Avatar Snapshots should render image 1`] = `
<div>
  <div
    class="avatar avatar--circle avatar--md avatar--primary"
  >
    <img
      alt="Emma Clark"
      class="avatar__img"
      src="path/to/image.jpg"
    />
  </div>
</div>
`;

exports[`Avatar Snapshots should renders component as anchor 1`] = `
<div>
  <a
    class="avatar avatar--circle avatar--md avatar--primary"
    href="#"
  >
    EC
  </a>
</div>
`;

exports[`Avatar Snapshots should renders default component 1`] = `
<div>
  <div
    class="avatar avatar--circle avatar--md avatar--primary"
  >
    EC
  </div>
</div>
`;
